2005-11-30  Derek Price  <derek@ximbiot.com>

	* commit.c (checkaddfile): Provide more information when changing
	keyword expansion mode.

	* client.c (update_entries): Honor noexec.
	(client_base_merge): Ignore noexec when working with temp files.
	* difflib.c (merge): Ditto.
	* filesubr.c (unlink_file): Expand header comment block.
	* server.c (server_base_checkout): Keep temp files in tmp.  Ignore
	noexec when removing temp files.

	* client.c (update_entries): Avoid removing base files when they are
	still needed.

	* update.c (join_file): Avoid dereferencing NULL.

	* client.c (update_entries): Don't output update status lines when
	REALLY_QUIET.

	* update.c (update, do_update): Set bases separately from -u.
	(merge_file, join_file): Consistently output "already contains the
	differences" messages when !QUIET.

	* server.c (server_base_checkout): Accept poptions argument & resend
	Base files when options have changed.
	* base.c, server.h: Change all references.
	* base.c (base_checkout): Accept poptions argument.
	* add.c, base.c, base.h, checkin.c, update.c: Change all references.
	* client.c (call_in_directory): Remove leading "./" from short_pathname
	when present.
	(update_entries): Output "C" & "M" lines when needed.
	(client_base_checkout): Allow Base files to be replaced.
	(client_base_merge): Try to pretend merges never happened when they
	have no effect.

	* sanity.sh: Compensate for new read-only Base files by forcing some
	directory removals.  Other minor corrections.

	* difflib.c (merge): Add label argument.
	* base.c, client.c, difflib.h: Update all references.
	* client.c (update_entries, client_base_copy): Handle existance
	errors.
	* update.c (checkout_file): Set correct existance flags.
	* sanity.sh: Compensate for new read-only Base files by forcing some
	directory removals.

2005-11-29  Derek Price  <derek@ximbiot.com>

	* sanity.sh: Compensate for new read-only Base files by forcing some
	directory removals.  Compensate for new output.
